plugins {
    id 'java'
    id 'com.epages.restdocs-api-spec' version '0.16.4'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'org.springframework.boot' version '2.6.7'
}

group 'com.seunghoona.restdocs'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.2'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    implementation 'io.rest-assured:rest-assured:4.4.0'
    implementation 'org.springframework.restdocs:spring-restdocs-restassured'
    implementation 'com.epages:restdocs-api-spec-restassured:0.16.4'
    implementation 'com.epages:restdocs-api-spec-mockmvc:0.16.4'

    implementation 'org.springframework.boot:spring-boot-starter-test'

    implementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}